Legger til støtte for å opprette revurdering av enkelte perioder