@@ -284,7 +284,7 @@ public class Behandling extends BaseEntitet {
     public boolean erManueltOpprettet() {
         return getBehandlingÅrsaker().stream()
             .map(BehandlingÅrsak::erManueltOpprettet)
-            .collect(Collectors.toList())
+            .toList()
             .contains(true);
     }
 
